<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michael.password_validator.MainActivity">

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_box"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar" />

    <Button
        android:id="@+id/validButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="checkPW"
        android:text="@string/validate_button"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="205dp"
        android:layout_height="5dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:indeterminate="false"
        android:max="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@android:style/Widget.Holo.Light.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:checked="false"
        android:clickable="false"
        android:duplicateParentState="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/editPassword"
        app:layout_constraintLeft_toRightOf="@+id/editPassword" />

</android.support.constraint.ConstraintLayout>
